[tool.poetry]
name = "ci_server"
version = "0.1.0"
description = ""
authors = ["Gabriel Boachie-Danquah <gabdanq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Authlib = "^0.15.3"
requests = "^2.25.1"
python-dotenv = "^0.17.0"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.812"
pre-commit = "^2.12.0"
pytest-flask = "^1.2.0"
flake8 = "^3.9.0"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88

[tools.isort]
profile = "black"
multi_line_output = 3
line_length = 88
